--- a/StudentInfoApi/Properties/launchSettings.json
+++ b/StudentInfoApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "StudentInfoAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7068;http://localhost:5068",
       "environmentVariables": {
