--- a/StudentInfoApi/appsettings.Development.json
+++ b/StudentInfoApi/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "StudentInfoSqliteDb": "Data Source=StudentInfo.db"
+  },
+  "Jwt": {
+    "Key": "this is the secret key for the jwt, it must be kept secure",
+    "Issuer": "https://localhost:7068",
+    "Audience": "StudentInfoAPI",
+    "Subject": "JWT for StudentInfoAPI"
   }
 }
